# pulumi-scaleway-instances

./: .gitignore  .golangci.yml  .goreleaser.darwin.yml  .goreleaser.yml  CHANGELOG.md  Makefile  README.md  go.work.sum  renovate.json  scaleway.instance.v1.Api.yml
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/pulumi_scaleway-instances/: __init__.py  provider.py
sdk/python/pulumi_scaleway-instances/action/: _inputs.py  list_server_actions.py  outputs.py  server_action.py
sdk/python/pulumi_scaleway-instances/availability/: __init__.py  get_server_types_availability.py
sdk/python/pulumi_scaleway-instances/bootscripts/: _enums.py  get_bootscript.py  list_bootscripts.py  outputs.py
sdk/python/pulumi_scaleway-instances/dashboard/: __init__.py  get_dashboard.py  outputs.py
sdk/python/pulumi_scaleway-instances/export/: __init__.py  export_snapshot.py
sdk/python/pulumi_scaleway-instances/images/: get_image.py  image.py  list_images.py
sdk/python/pulumi_scaleway-instances/ips/: __init__.py  ip.py  list_ips.py
sdk/python/pulumi_scaleway-instances/placement_groups/: _enums.py  list_placement_groups.py  placement_group.py
sdk/python/pulumi_scaleway-instances/private_nics/: __init__.py  _enums.py  get_private_nic.py  outputs.py
sdk/python/pulumi_scaleway-instances/rules/: __init__.py  _enums.py  _inputs.py  list_security_group_rules.py  outputs.py  security_group_rules.py
sdk/python/pulumi_scaleway-instances/security_groups/: security_group.py
sdk/python/pulumi_scaleway_instances/: README.md  __init__.py  _utilities.py  provider.py
(+572 files in other folders)
