[project]
  name = "pulumi_scaleway_instances"
  description = "A Pulumi package for creating and managing Scaleway Instances resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1"]
  keywords = ["pulumi", "scaleway-instances", "category/cloud", "kind/native"]
  readme = "README.md"
  requires-python = ">=3.7"
  version = "0.0.0"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://cloudysky.software"
    Repository = "https://github.com/cloudy-sky-software/pulumi-scaleway-instances"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_scaleway_instances = ["py.typed", "pulumi-plugin.json"]
